--- a/view/login.html
+++ b/view/login.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" type="text/css" href="/css/basic.css">
     </head>
 
-    <?PHP include "header.html";?>
-
     <body>
+        <?PHP include "header.html";?>
+
         <div class="login">
             <h2>Login</h2>
             <input type='checkbox' id='form-switch'>
@@ -33,6 +33,8 @@
             </div>
             <p><?=$msg?></p>
         </div>
+
+        <?PHP include "footer.html";?>
 
         <script language='javascript' type='text/javascript'>
          function confirm_password() {
