--- a/css/basic.css
+++ b/css/basic.css
@@ -19,9 +19,13 @@
 
 body {
     border: unset;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 html {
     background-color: unset;
+    height: 100%;
 }
 button::-moz-focus-inner {
     border: 0;
@@ -58,6 +62,17 @@ header a {
 #camagru_title:hover {
     text-decoration: none;
 }
+/* * Footer */
+footer {
+    margin-top: auto;
+    text-align: center;
+    color: #586e75;
+}
+#footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
 /* * Login */
 .login {
     margin:0 auto;
