reset.php add footer and header

--- a/view/reset.html
+++ b/view/reset.html
@@ -9,6 +9,8 @@
     </head>
 
     <body>
+        <?PHP include "header.html";?>
+
         <div class="login">
             <h2>Reset password</h2>
             <form method='post'>
@@ -18,6 +20,8 @@
             </form>
             <p><?=$msg?></p>
         </div>
+
+        <?PHP include "footer.html";?>
 
         <script language='javascript' type='text/javascript'>
          function confirm_password() {
