--- a/view/forgot.html
+++ b/view/forgot.html
@@ -9,6 +9,8 @@
     </head>
 
     <body>
+        <?PHP include "header.html";?>
+
         <div class="login">
             <h2>Forgot password</h2>
             <form method='post'>
@@ -17,5 +19,7 @@
             </form>
             <p><?=$msg?></p>
         </div>
+
+        <?PHP include "footer.html";?>
     </body>
 </html>
