--- a/css/basic.css
+++ b/css/basic.css
@@ -111,4 +111,29 @@ input {
     margin: 0.3em 0em;
     font-size: .9em;
 }
-/* * Users */
+/* * Index */
+#canvas {
+	  display: none;
+}
+.editing {
+    text-align: center;
+}
+#photo {
+    width: 320px;
+    height: 240px;
+}
+.capture {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.camera, .output {
+    margin: 0 0.9em;
+}
+.upload {
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    margin: 0 auto;
+}
