--- a/view/index.html
+++ b/view/index.html
@@ -11,9 +11,15 @@
     <body>
         <?PHP include "header.html";?>
 
-        <div class="login">
-            <h2></h2>
-            <p><?=$msg?></p>
+        <div class="content index">
+            <?=$take_picture?>
+
+            <?=$images?>
+
+            <div class="pagination">
+                <?=$prev?>
+                <?=$next?>
+            </div>
         </div>
 
         <?PHP include "footer.html";?>
