--- a/css/basic.css
+++ b/css/basic.css
@@ -19,13 +19,17 @@
 
 body {
     border: unset;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    max-width: none;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+    /* display: flex; */
+    /* flex-direction: column; */
 }
 html {
     background-color: unset;
     height: 100%;
+    margin: 0;
 }
 label {
     cursor: pointer;
@@ -71,7 +75,7 @@ header a {
 }
 /* * Footer */
 footer {
-    margin-top: auto;
+    /* margin-top: auto; */
     text-align: center;
     color: #586e75;
 }
@@ -111,7 +115,7 @@ input {
     margin: 0.3em 0em;
     font-size: .9em;
 }
-/* * Index */
+/* * Edting */
 #canvas {
 	  display: none;
 }
@@ -136,4 +140,63 @@ input {
     flex-direction: column;
     width: 30vw;
     margin: 0 auto;
+}
+
+/* * Grid test */
+body {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr) ) ; */
+    grid-template-rows: 60px 4fr auto;
+    grid-template-areas:
+    "header  header  header"
+    "content content sidebar"
+    "footer  footer  footer";
+}
+.sidebar {
+    grid-area: sidebar;
+    position: relative;
+}
+
+.content {
+    grid-area: content;
+    grid-column: auto / span 2;
+}
+
+header {
+    grid-area: header;
+}
+
+footer {
+    grid-area: footer;
+}
+.sidebar {
+    display : flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.sidebar img {
+    display: block;
+    max-width: 100%;
+    max-height: 300px;
+    height: auto;
+}
+/* * Index */
+/* #take_picture a { */
+/*     color: #268bd2; */
+/* } */
+.index {
+    text-align: center;
+}
+.index img {
+    display: block;
+    max-width: 100%;
+    max-height: 300px;
+    height: auto;
+}
+.pagination {
+    display: flex;
+    justify-content: space-evenly;
 }
