--- a/view/sidebar.html
+++ b/view/sidebar.html
@@ -3,7 +3,7 @@
     require_once("config/database.php");
     $db = db_connect();
 
-    $images = get_images($db, 5);
+    $images = get_images($db, 0, 5);
 
     foreach($images as $image)
     echo  "<img src='". $image['path'] ."' alt='image'>"
