--- a/view/image.html
+++ b/view/image.html
@@ -11,16 +11,19 @@
     <body>
         <?PHP include "header.html";?>
 
-        <div class="content index">
-            <?=$take_picture?>
+        <div class="content">
+            <?=$msg?>
 
-            <div class="images">
-                <?=$images?>
+            <div class="image">
+                <?=$image?>
             </div>
 
-            <div class="pagination">
-                <?=$prev?>
-                <?=$next?>
+            <div class="actions">
+                <?=$actions?>
+            </div>
+
+            <div class="comments">
+                <?=$comments?>
             </div>
         </div>
 
