--- a/view/sidebar.html
+++ b/view/sidebar.html
@@ -6,6 +6,6 @@
     $images = get_images($db, 0, 5);
 
     foreach($images as $image)
-    echo  "<img src='". $image['path'] ."' alt='image'>"
+    echo  "<img src='". $image['path'] ."' >"
     ?>
 </div>
