--- a/view/image.html
+++ b/view/image.html
@@ -14,7 +14,7 @@
         <div class="content">
             <?=$msg?>
 
-            <div class="image">
+            <div class="images">
                 <?=$image?>
             </div>
 
