--- a/css/basic.css
+++ b/css/basic.css
@@ -1,19 +1,3 @@
-/* * Minimal */
-/* body{ */
-/*     margin:1em auto; */
-/*     max-width:40em; */
-/*     padding:0 .62em; */
-/*     font:1.2em/1.62 sans-serif; */
-/* } */
-/* h1,h2,h3 { */
-/*     line-height:1.2; */
-/* } */
-/* @media print{ */
-/*     body{ */
-/*         max-width:none; */
-/*     } */
-/* } */
-
 /* * Theme */
 @import url(http://thomasf.github.io/solarized-css/solarized-dark.min.css);
 
@@ -23,8 +7,6 @@ body {
     min-height: 100%;
     margin: 0;
     padding: 0;
-    /* display: flex; */
-    /* flex-direction: column; */
 }
 html {
     background-color: unset;
@@ -128,7 +110,7 @@ input {
 }
 .capture {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -141,13 +123,16 @@ input {
     width: 30vw;
     margin: 0 auto;
 }
+#video, #canvas {
+    width: 320px;
+    height: 240px;
+}
 
 /* * Grid test */
 body {
     display: grid;
     /* grid-gap: 20px; */
     grid-template-columns: 1fr 1fr auto;
-    /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr) ) ; */
     grid-template-rows: 60px 4fr auto;
     grid-template-areas:
     "header  header  header"
@@ -159,6 +144,8 @@ body {
     grid-column: auto / span 2;
     margin: 0 10vw;
     text-align: center;
+    justify-self: center;
+    width: 25vw;
 }
 
 header {
@@ -170,25 +157,35 @@ footer {
 }
 .sidebar {
     grid-area: sidebar;
-    /* position: relative; */
     width: 25vw;
     display : flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-    /* align-items: center; */
 }
 .sidebar img {
     object-fit: contain;
     margin: 10px;
-    /* display: block; */
-    /* max-width: 100%; */
-    /* max-height: 300px; */
-    /* height: auto; */
 }
+
+@media (max-width: 768px) {
+    body {
+        grid-template-areas:
+        "header"
+        "content"
+        "sidebar"
+        "footer";
+        grid-template-columns: 1fr;
+        grid-template-rows: 60px 1fr auto auto;
+    }
+    .sidebar {
+        width: 80%;
+        margin: auto;
+    }
+    .content {
+        width: 100%;
+    }
+}
+
 /* * Index */
-/* #take_picture a { */
-/*     color: #268bd2; */
-/* } */
 .images {
     text-align: center;
     display: flex;
