--- a/css/basic.css
+++ b/css/basic.css
@@ -98,9 +98,9 @@ input {
     font-size: .9em;
 }
 /* * Edting */
-#canvas {
-	  display: none;
-}
+/* #canvas { */
+/* 	  display: none; */
+/* } */
 .editing {
     text-align: center;
 }
